Nigel.Dapr/Documents/yaml/daprdemo-backend-deployment-enable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daprbackend
  labels:
    app: daprbackend
spec:
  selector:
    matchLabels:
      app: daprbackend
  replicas: 1
  template:
    metadata:
      name: daprbackend
      labels:
        app: daprbackend
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "backend"
        dapr.io/app-port: "80"
        dapr.io/sidecar-liveness-probe-delay-seconds: "10"
        dapr.io/sidecar-readiness-probe-delay-seconds: "10"
        dapr.io/log-as-json: "true"
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
        # sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: daprbackend
          image: secondgalaxy/nigeldaprbackendapi:1.1.2
          imagePullPolicy: Always #IfNotPresent
          ports:
          # Define the ASP.NET Core ports
          - containerPort: 80
          - containerPort: 443
      terminationGracePeriodSeconds: 180
      imagePullSecrets:
        - name: registry-jees
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

# ---
# # # In order to be able to access the service from outside the cluster, we will need to add a Service object
# apiVersion: v1
# kind: Service
# metadata:
#   name: daprbackend
# spec:
#   type: ClusterIP
#   ports:
#   - port: 5000
#     name: http
#   selector:
#     app: daprbackend
