Nigel.Dapr/Documents/yaml/daprdemo-backend-v-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: daprdemo
spec:
  hosts:
  - "*"
  gateways:
  - daprdemo-gateway
  http:
  - match:
    - uri:
        exact:
    route:
    - destination:
        host: daprbackend
        port:
          number: 5000
