Nigel.Dapr/Documents/yaml/daprdemo-front-v-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: daprfront
spec:
  hosts:
  - "*"
  gateways:
  - daprdemo-gateway
  http:
  - match:
    - uri:
        prefix: /front
    route:
    - destination:
        host: daprfront
        port:
          number: 5000
