Nigel.Dapr/Documents/yaml/daprdemo-v-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: daprdemo
spec:
  hosts:
  - "*"
  gateways:
  - daprdemo-gateway
  http:
  - match:
    - uri:
        prefix: "/backend"
    route:
    - destination:
        host: backend-dapr
        port:
          number: 80
  - match:
    - uri:
        prefix: "/front"
    route:
    - destination:
        host: daprfront
        port:
          number: 80
